Fixes occasionally-broken layout width

--- a/frontend/src/app/related-items/related-items.component.scss
+++ b/frontend/src/app/related-items/related-items.component.scss
@@ -1,3 +1,15 @@
-.mat-list-item {
-  max-width: 100vw;
+.related-items {
+  .mat-list-item {
+    max-width: 100vw;
+  }
+
+  ::ng-deep .mat-list .mat-list-item .mat-line {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+  }
+
+  ::ng-deep .mat-list .mat-list-item {
+    height: initial;
+  }
 }
+
