--- a/frontend/src/app/resource-detail/resource-detail.component.scss
+++ b/frontend/src/app/resource-detail/resource-detail.component.scss
@@ -1,5 +1,5 @@
 #resource-map agm-map {
   height: 400px;
   width: 100%;
-  max-width: 100vh;
+  max-width: 100vw;
 }
